// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordRequirement should display requirement 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  item={true}
  style={
    Object {
      "fontSize": "small",
    }
  }
>
  <CheckCircleOutlineIcon
    style={
      Object {
        "fontSize": "inherit",
      }
    }
  />
  <WithStyles(ForwardRef(Typography))
    style={
      Object {
        "fontSize": "inherit",
      }
    }
  >
    description
  </WithStyles(ForwardRef(Typography))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`PasswordRequirement should not be checked if check is false 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  item={true}
  style={
    Object {
      "fontSize": "small",
    }
  }
>
  <RadioButtonUncheckedIcon
    style={
      Object {
        "fontSize": "inherit",
      }
    }
  />
  <WithStyles(ForwardRef(Typography))
    style={
      Object {
        "fontSize": "inherit",
      }
    }
  >
    description
  </WithStyles(ForwardRef(Typography))>
</WithStyles(ForwardRef(Grid))>
`;
